# Secondsight

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
app/: gradio_app.py
configs/: default.yaml  market1501_strong_baseline.yaml
docs/: MODEL_CARD.md
notebooks/: train_colab.ipynb
scripts/: __init__.py  download_data.py  evaluate.py  train.py  visualize.py
space/: DEPLOYING.md  README.md  app.py  requirements.txt
src/reid/: __init__.py  config.py
src/reid/data/: __init__.py  build.py  dataset.py  sampler.py  transforms.py
src/reid/engine/: __init__.py  scheduler.py  trainer.py
src/reid/evaluation/: __init__.py  evaluator.py  metrics.py  reporting.py  rerank.py
src/reid/losses/: __init__.py  build.py  center.py  cross_entropy.py  triplet.py
src/reid/models/: __init__.py  backbone.py  pooling.py  reid_model.py
src/reid/utils/: __init__.py  checkpoint.py  device.py  distance.py  logging.py  meters.py  reproducibility.py
src/reid/visualization/: __init__.py  analysis.py  gradcam.py  ranking.py
tests/: __init__.py  conftest.py  test_checkpoint.py  test_config.py  test_dataset.py  test_device.py  test_distance.py  test_losses.py  test_metrics.py  test_model.py  test_reporting.py  test_rerank.py  test_sampler.py  test_scheduler.py
