[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "Secondsight"
dynamic = ["version"]
description = "Production-grade Person Re-Identification (Re-ID) on the Market-1501 dataset."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Vardh Jain", email = "vardhjain20@gmail.com" }]
maintainers = [{ name = "Vardh Jain", email = "vardhjain20@gmail.com" }]
keywords = [
    "person-re-identification",
    "re-id",
    "market-1501",
    "computer-vision",
    "deep-learning",
    "pytorch",
    "metric-learning",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Recognition",
]
dependencies = [
    "torch>=2.2",
    "torchvision>=0.17",
    "numpy>=1.24",
    "pillow>=10",
    "matplotlib>=3.7",
    "opencv-python-headless>=4.8",
    "seaborn>=0.13",
    "pandas>=2",
    "scikit-learn>=1.3",
    "gradio>=4",
    "kagglehub>=0.3",
    "pyyaml>=6",
    "tqdm>=4.66",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6",
    "pytest>=8",
    "pytest-cov>=5",
    "mypy>=1.10",
    "pre-commit>=3.7",
    "types-PyYAML",
]

[project.urls]
Homepage = "https://github.com/vardhjain/Secondsight"
Repository = "https://github.com/vardhjain/Secondsight"
Issues = "https://github.com/vardhjain/Secondsight/issues"
Documentation = "https://github.com/vardhjain/Secondsight/blob/main/README.md"

[project.scripts]
reid-download = "scripts.download_data:main"
reid-train = "scripts.train:main"
reid-evaluate = "scripts.evaluate:main"
reid-visualize = "scripts.visualize:main"

[tool.hatch.version]
path = "src/reid/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/reid", "scripts"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/scripts",
    "/configs",
    "/tests",
    "/README.md",
    "/LICENSE",
]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "scripts", "tests", "app"]
extend-exclude = ["notebooks", "*.ipynb"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "N",    # pep8-naming
    "D",    # pydocstyle
]
ignore = [
    "D104",  # missing docstring in public package
    "D107",  # missing docstring in __init__ (documented at class level)
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D"]
"scripts/**" = ["D"]
"app/**" = ["D"]
"src/reid/__init__.py" = ["D"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
docstring-code-format = true

[tool.pytest.ini_options]
testpaths = ["tests"]
# Make the src-layout ``reid`` package importable during tests without requiring
# an editable install (``pip install -e .``). Pytest prepends these to sys.path.
pythonpath = ["src", "."]
addopts = "-q --strict-markers"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_ignores = false
warn_redundant_casts = true
no_implicit_optional = true
show_error_codes = true
files = ["src/reid"]

[tool.coverage.run]
source = ["reid"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true
